--- a/conf/application.conf
+++ b/conf/application.conf
@@ -131,4 +131,4 @@ microservice {
 
 whitelisted.useragents = ["push-pull-notifications-api"]
 
-authorisationKey = "aWFtcHVzaHB1bGxhcGk="
+authorizationKey = "aWFtcHVzaHB1bGxhcGk="
