API-4500: add allowedHostList

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -130,5 +130,6 @@ microservice {
 }
 
 whitelisted.useragents = ["push-pull-notifications-api"]
+allowedHostList = []
 
 authorizationKey = "aWFtcHVzaHB1bGxhcGk="
