API-4590: switch off follow redirects in play config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,9 @@ play.http.secret.key = "DihbGwzJ70DqyWRlbkGQYIj4rq9sFXQRKEqtfbjPBBjiV7XoR4IANoId
 # ~~~~~
 play.i18n.langs = ["en"]
 
+#This stops the connector from following any redirects from the end clients
+play.ws.followRedirects = false
+
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
