APIS-5338 - Set notification max set as configurable parameter

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,5 +134,5 @@ microservice {
 
 whitelisted.useragents = ["push-pull-notifications-api"]
 allowedHostList = []
-
+notifications.size = 100K
 authorizationKey = "aWFtcHVzaHB1bGxhcGk="
