--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,4 +134,5 @@ microservice {
 
 whitelisted.useragents = ["push-pull-notifications-api"]
 allowedHostList = []
+notifications.maxSize = 100K
 authorizationKey = "aWFtcHVzaHB1bGxhcGk="
